# rust-tools

./: Cargo.toml  README.md  flake.nix  result
.github/workflows/: update-locks.yml
cava-formatter/: Cargo.toml  waybar-cava.conf
cava-formatter/src/: main.rs
drop-terminal/: Cargo.toml
drop-terminal/src/: main.rs
storage-monitor/: Cargo.toml
storage-monitor/src/: main.rs
sys-controls/: Cargo.toml  memo.txt
sys-controls/src/: main.rs
weather-fetcher/: Cargo.toml
weather-fetcher/src/: main.rs
wifi-portal-watch/: Cargo.toml
wifi-portal-watch/src/: main.rs
